Adds binary operators to introduction.

--- a/notebooks/01-03-nn-introduction.ipynb
+++ b/notebooks/01-03-nn-introduction.ipynb
@@ -14,12 +14,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0fd2ce0",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
    "source": [
     "Artificial neural networks (ANN) are inspired from biological neural networks and to some extend try to mimic the way the human brain is learning.  The human brain contains over 100 billion interconnected neurons and each of them one consists of three main components: soma, axon and dendrietes as can be seem in the following image (taken from https://en.wikipedia.org/wiki/Biological_neuron_model)\n",
     "\n",
@@ -64,17 +58,74 @@
     "| uniform structure | functional modules                                         |\n",
     "| a few node types  | hundreds of neuron types                                   |\n",
     "| 10–1000 nodes     | human brain: O(1011) neurons O(1015) synapses              |\n",
-    "| mostly static     | dynamic: spike trains facilitation fatigue synchronization |\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d76179f7",
+    "| mostly static     | dynamic: spike trains facilitation fatigue synchronization |\n",
+    "\n",
+    "### Bibliography \n",
+    "\n",
+    "Some of the best books I have studied during the years about NN are the following:\n",
+    "\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <td>\n",
+    "            <img src=\"./images/neural-smithing.jpg\" style=\"float:center;width:120px;\"/>\n",
+    "        </td>\n",
+    "        <td style=\"text-align:left\">\n",
+    "            Very comprehensive coverage of the basics of NN; strongly recommended if you want \n",
+    "            to delve in to the related theory and math.\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td>\n",
+    "            <img src=\"./images/deep-learning.jpg\" style=\"float:center;width:120px;\"/>\n",
+    "        </td>\n",
+    "        <td style=\"text-align:left\">\n",
+    "            Covers the theory behind the modern evolutions of NN covering convolutional and recurrent NN.\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td>\n",
+    "            <img src=\"./images/machine-learning-theodoridis.jpg\" style=\"float:center;width:120px;\"/>\n",
+    "        </td>\n",
+    "        <td style=\"text-align:left\">\n",
+    "           Advanced text, coverings topics like Sparse data, Learning Kernels, Deep Learning.\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td>\n",
+    "            <img src=\"./images/OO-NN-CPP.jpg\" style=\"float:center;width:120px;\"/>\n",
+    "        </td>\n",
+    "        <td style=\"text-align:left\">\n",
+    "                 Older text, my first boon on NN (late nineties), still has some something to teach us (needs a solid understanding of C++ though!)\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td>\n",
+    "            <img src=\"./images/hundred-page-ml-book.jpg\" style=\"float:center;width:120px;\"/>\n",
+    "        </td>\n",
+    "        <td style=\"text-align:left\">\n",
+    "                 Summarizes the theory behind NN, good starting point.\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td>\n",
+    "            <img src=\"./images/math-for-machine-learning.jpg\" style=\"float:center;width:120px;\"/>\n",
+    "        </td>\n",
+    "        <td style=\"text-align:left\">\n",
+    "                 Perfect if you need a math refresher.\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "</table>\n",
+    "    "
+   ],
    "metadata": {
+    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   },
+   }
+  },
+  {
+   "cell_type": "markdown",
    "source": [
     "###  The simplest  Neural Network\n",
     "\n",
@@ -109,7 +160,13 @@
     "Our objective will be to find the best possible value for the **weight** than will **minimize** the Loss function which will be a measurement of how accurate our predictions are.\n",
     "\n",
     "<img src=\"./images/simplest-nn-image-1.png\" style=\"width:100%;\"/> \n"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
