Improves linear regression notebook.

--- a/notebooks/01-03-nn-introduction.ipynb
+++ b/notebooks/01-03-nn-introduction.ipynb
@@ -933,7 +933,11 @@
   {
    "cell_type": "markdown",
    "id": "0d774f13",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "#### Generalizing for more than one synapsis\n",
     "\n",
