Improves introduction notebook.

--- a/notebooks/01-01-Introduction.ipynb
+++ b/notebooks/01-01-Introduction.ipynb
@@ -2,11 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
    "source": [
     "# What is machine learning\n",
     "\n",
@@ -18,6 +13,29 @@
     "how it differs from what is called **traditional** programming and\n",
     "what are the different kinds and problems that can be solved with\n",
     "it.\n",
+    "\n",
+    "## What problems can ML solve?\n",
+    "\n",
+    "Think about how you can writte a program to make a distinction between a dog\n",
+    "and a cat.\n",
+    "\n",
+    "What can we look for in an image to tell wheather it is a dog or a cat?  If you \n",
+    "think a bit about it you will conclude that this is not an easy problem: They \n",
+    "both have two ears, one nose, four legs for example.  Can we write a function\n",
+    "to somehow check some characteristics of the two animals using an IF THEN ELSE\n",
+    "logic similarly to how we would have written a conversion from Fahrenheit to Celsius or?\n",
+    "\n",
+    "\n",
+    "\n",
+    "<table>\n",
+    "<tr>\n",
+    "<td><img src=\"./images/dog.jpeg\" style=\"width:220px; height:220px\"/></td>\n",
+    "<td><img src=\"./images/cat.jpeg\" style=\"width:220px; height:220px\"/></td>\n",
+    "</tr>\n",
+    "</table>\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "## Traditional programming\n",
     "\n",
@@ -171,15 +189,16 @@
     "|Robotics|\n",
     "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
+   ],
    "metadata": {
+    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   },
+   }
+  },
+  {
+   "cell_type": "markdown",
    "source": [
     "### Classification and Regresssion\n",
     "\n",
@@ -236,6 +255,8 @@
     "\n",
     "#### The XOR operator\n",
     "\n",
+    "<img src=\"./images/xor-operator.png\" alt=\"sample data\"/>\n",
+    "\n",
     "Now that we have seen the AND and OR opeartor let's shift our focus to the XOR operator\n",
     "that can be modeled as follows:\n",
     "\n",
@@ -248,7 +269,25 @@
     "If you try to find this line, you will soon discover that it is impossible to\n",
     "draw it and this is one of the most trivial problems where a Neural Network \n",
     "can come handy to solve as we will see soon!\n"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -258,6 +297,13 @@
      "name": "#%%\n"
     }
    },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
