Adds the wine data.

--- a/notebooks/01-02.1-wine-sample.ipynb
+++ b/notebooks/01-02.1-wine-sample.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 254,
    "id": "784c6ab6",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 255,
    "id": "63dd9699",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 256,
    "id": "6bfd839d",
    "metadata": {},
    "outputs": [],
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 257,
    "id": "8be14825",
    "metadata": {},
    "outputs": [
@@ -283,7 +283,7 @@
        "4       0.56      9.4        5  "
       ]
      },
-     "execution_count": 245,
+     "execution_count": 257,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 258,
    "id": "f21cef76",
    "metadata": {
     "scrolled": false
@@ -499,7 +499,7 @@
        "quality                 6.00000    6.00000    9.00000  "
       ]
      },
-     "execution_count": 246,
+     "execution_count": 258,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 259,
    "id": "4fb22620",
    "metadata": {},
    "outputs": [
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 260,
    "id": "b1672b01",
    "metadata": {},
    "outputs": [
@@ -560,17 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
-   "id": "21b762d1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = LinearRegression().fit( X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 261,
    "id": "b1458f01",
    "metadata": {},
    "outputs": [],
@@ -582,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 262,
    "id": "a32d1e4e",
    "metadata": {},
    "outputs": [
@@ -611,7 +601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb27fb5b",
+   "id": "bb6f3e86",
    "metadata": {},
    "source": [
     "### Features distribution"
@@ -619,8 +609,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
-   "id": "80c91792",
+   "execution_count": 263,
+   "id": "6b7265cf",
    "metadata": {
     "scrolled": false
    },
@@ -647,8 +637,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "070a4a33",
+   "metadata": {},
+   "source": [
+    "### Train the model \n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 264,
+   "id": "21b762d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = LinearRegression().fit( X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "438e90bb",
+   "metadata": {},
+   "source": [
+    "### Test the model using unseen data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 265,
    "id": "16fcee31",
    "metadata": {},
    "outputs": [
@@ -775,7 +792,7 @@
        "[1950 rows x 3 columns]"
       ]
      },
-     "execution_count": 253,
+     "execution_count": 265,
      "metadata": {},
      "output_type": "execute_result"
     }
