--- a/notebooks/01-01.2-linear-regression-example.ipynb
+++ b/notebooks/01-01.2-linear-regression-example.ipynb
@@ -5,7 +5,9 @@
    "id": "8ceb8597",
    "metadata": {},
    "source": [
-    "## Example of multi-variable Linear Regression\n",
+    "# Example of multi-variable Linear Regression\n",
+    "\n",
+    "<img src=\"./images/wines.jpeg\" style=\"float:center\" />\n",
     "\n",
     "In this notebook we use the following [dataset](https://archive.ics.uci.edu/ml/datasets/wine+quality) from the [UCI machine learning repository](https://archive.ics.uci.edu/ml/index.php) which contains a lot of usefull dataset for training purposes.\n",
     "\n",
