--- a/notebooks/01-00-Introduction.ipynb
+++ b/notebooks/01-00-Introduction.ipynb
@@ -2,6 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# What is machine learning\n",
     "\n",
@@ -25,17 +30,12 @@
     "to somehow check some characteristics of the two animals using an IF THEN ELSE\n",
     "logic similarly to how we would have written a conversion from Fahrenheit to Celsius or?\n",
     "\n",
-    "\n",
-    "\n",
     "<table>\n",
     "<tr>\n",
     "<td><img src=\"./images/dog.jpeg\" style=\"width:220px; height:220px\"/></td>\n",
     "<td><img src=\"./images/cat.jpeg\" style=\"width:220px; height:220px\"/></td>\n",
     "</tr>\n",
     "</table>\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "## Traditional programming\n",
     "\n",
@@ -103,6 +103,21 @@
     "to the output with the less possible error when applied to unseen\n",
     "data (meaning when predecting values).\n",
     "\n",
+    "Supervised datasets are those that have a specific set of\n",
+    "inputs and outputs.  Both input and output can consist of \n",
+    "a single or multiple data points albeit their number is the\n",
+    "same in every sample.  \n",
+    "\n",
+    "As a typical example of supervised learning we can think of\n",
+    "a stock price predictor which receives a fixed size of historical\n",
+    "data points while returns a single binary output designating \n",
+    "wheather the following price in the time series will be higher\n",
+    "from the previous or not (this type of a model is also called\n",
+    "a classifier). Other problems that are solved using unsupervived\n",
+    "methods are spam identification, image and voice recognition, medical diagnosis, \n",
+    "sentiment analysis, false alarm detection.\n",
+    "\n",
+    "\n",
     "Some of the most commonly used supervised algoritgms are the\n",
     "following:\n",
     "\n",
@@ -110,9 +125,11 @@
     "| ----------- |\n",
     "|Linear Regression|\n",
     "|Logistic Regression|\n",
+    "|Support Vector Machines\n",
     "|Neural Networks|\n",
+    "|Convolutional neural network|\n",
+    "|Recurrent neural network|\n",
     "|Decision Trees|\n",
-    "|Support Vector Machines|\n",
     "\n",
     "**Example of supervised learning**\n",
     "\n",
@@ -149,6 +166,19 @@
     "labels and our objective is to discover hidden patterns of data\n",
     "groupings or clusters.\n",
     "\n",
+    "As example of unsupervised learning you think of the t-shirt\n",
+    "sizes.  Knowing that we are looking let's say for 4 different\n",
+    "sizes like small - medium - large - extra large and we have \n",
+    "a collection of one thousand measurements of body measurements.\n",
+    "An unsupervised model will allow us to find the mean values for\n",
+    "each size (also called centroid) without having any additional\n",
+    "knowledge. \n",
+    "\n",
+    "Another example of unsupervised learning can be found in customer \n",
+    "segmentation (usually solved using K-means or DBScan) although in\n",
+    "category we can add \"hybrid\" algorithms like Boltzman machine or\n",
+    "Hopfiled networks that become famous for movie reviews).\n",
+    "\n",
     "Some commonly used algorithms of Unsupervised learning are the\n",
     "following:\n",
     "\n",
@@ -156,6 +186,7 @@
     "| Algorithm |\n",
     "| ----------- |\n",
     "|K-means clustering|\n",
+    "|DBScan|\n",
     "|KNN (k-nearest neighbors)|\n",
     "|Hierarchal clustering|\n",
     "|Anomaly detection|\n",
@@ -189,16 +220,15 @@
     "|Robotics|\n",
     "\n",
     "\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Classification and Regresssion\n",
     "\n",
@@ -269,43 +299,7 @@
     "If you try to find this line, you will soon discover that it is impossible to\n",
     "draw it and this is one of the most trivial problems where a Neural Network \n",
     "can come handy to solve as we will see soon!\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   ]
   }
  ],
  "metadata": {
