--- a/notebooks/bibliography.ipynb
+++ b/notebooks/bibliography.ipynb
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "457d5ab4",
    "metadata": {},
    "outputs": [
@@ -153,10 +153,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f73ed656d70>"
+       "<IPython.lib.display.IFrame at 0x7f73ed657790>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "06576e85",
    "metadata": {},
    "outputs": [
@@ -187,10 +187,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f73ed6578b0>"
+       "<IPython.lib.display.IFrame at 0x7f73ed655870>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
