--- a/notebooks/bibliography.ipynb
+++ b/notebooks/bibliography.ipynb
@@ -133,8 +133,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "25636fc6",
+   "metadata": {},
+   "source": [
+    "[yolo](\"./data/yolo-paper.pdf\")\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "457d5ab4",
    "metadata": {},
    "outputs": [
@@ -153,10 +162,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f73ed657790>"
+       "<IPython.lib.display.IFrame at 0x7f73ed6560b0>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "06576e85",
    "metadata": {},
    "outputs": [
@@ -187,10 +196,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f73ed655870>"
+       "<IPython.lib.display.IFrame at 0x7f73ed657250>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "id": "ca7632dd",
    "metadata": {},
    "outputs": [
@@ -220,10 +229,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f73ed655030>"
+       "<IPython.lib.display.IFrame at 0x7f73ed6577c0>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
