Improves Titanic text.

--- a/notebooks/03-01-00-titanic-datataset.ipynb
+++ b/notebooks/03-01-00-titanic-datataset.ipynb
@@ -2,12 +2,80 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a01b4833",
+   "id": "85ffc58f",
    "metadata": {},
    "source": [
     "# Running a classifier on the Titanic Dataset\n",
     "\n",
-    "<img src=\"./images/titanic.jpg\" style=\"width:820px; height:420px\"/>"
+    "<img src=\"./images/titanic.jpg\" style=\"width:820px; height:420px\"/>\n",
+    "\n",
+    "The Titanic dataset is one of the classical datasets that are used as an\n",
+    "introduction to machine learning and it is mentioned by several books and also\n",
+    "is very active in Kaggle.\n",
+    "\n",
+    "The objective is to build a model to predict whether a specific passenger will\n",
+    "survive or not based on an array of provided data.\n",
+    "\n",
+    "The depended variable (the one that we need to predict) is a binary value\n",
+    "called survival.\n",
+    "\n",
+    "We also have the following independent variables available:\n",
+    "\n",
+    "- Pclass (The ticket class{ First, second or third)\n",
+    "- Sex\n",
+    "- Age in years\n",
+    "- Sibsp (Number of siblings or spouses aboard the Titanic)\n",
+    "- Parch\t(Number of parents / children aboard the Titanic)\t\n",
+    "- Ticket\n",
+    "- Fare \n",
+    "- Cabin\t\n",
+    "- Embarked\t(Port of Embarkation\tC = Cherbourg, Q = Queenstown, S = Southampton)\n",
+    "\n",
+    "## Data Preprocessing\n",
+    "\n",
+    "We have several things to do before we will be able to build a successful model\n",
+    "and mostly this has to do with understanding the data, cleaning then if\n",
+    "needed, creating new features (a process also known as feature engineering) and\n",
+    "also deciding what machine learning algorithm to use based on the nature of the\n",
+    "data.\n",
+    "\n",
+    "### Cleaning Data\n",
+    "\n",
+    "Some of the columns have incomplete data that appear as None when loaded from\n",
+    "the data source.  This might be due to an error of the gathering clerk who\n",
+    "forgot to write then down but can also have some meaning like for example a\n",
+    "passenger might not had a cabin number at all. \n",
+    "\n",
+    "We have to decide what we will do with missing data and we will see a couple of\n",
+    "ways to deal with them. If there are very few missing data we might simply\n",
+    "decide to remove the corresponding rows from the dataset, otherwise we will\n",
+    "have to either use the mean or median values or discover a better more suitable\n",
+    "algorithm.\n",
+    "\n",
+    "An example of data cleaning in our dataset can be found in the Age column.\n",
+    "\n",
+    "### Feature engineering\n",
+    "\n",
+    "In many cases it makes sense to \"present\" the data to the model after some kind\n",
+    "of a composition that will \"help\" the model to easier use them. We will see\n",
+    "such a case in our example in the Cabin field.\n",
+    "\n",
+    "### Converting nominal to categorical data\n",
+    "\n",
+    "We can think of nominal data as labels that belong to a specific set of\n",
+    "categories; they differ from scalar data in the fact that it does not make\n",
+    "sense to order it in a meaningful way. Think of the variables male - female or\n",
+    "car - bus - train as typical examples of nominal data.\n",
+    "\n",
+    "When dealing with nominal data we need to find a good way to present them to\n",
+    "the model and usually one of the easier ways to do so is to convert them to\n",
+    "lists of 1 and 0 as we will do in this example for many of our variables.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -2774,7 +2842,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4b9ce9e",
+   "id": "3512e07f",
    "metadata": {},
    "outputs": [],
    "source": []
