Adds the visualizations for Random Forests.

--- a/notebooks/03-00.1-intro-random-forest.ipynb
+++ b/notebooks/03-00.1-intro-random-forest.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0dd149fd",
+   "id": "2d7c61c1",
    "metadata": {},
    "source": [
     "### Example\n",
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fa24d6e2",
+   "id": "c2d12ee4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "64125c2f",
+   "id": "257af2d8",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44d3947b",
+   "id": "48a51fc2",
    "metadata": {},
    "source": [
     "## Convert targets to categorical\n",
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4621f2a6",
+   "id": "db1d338f",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "932b20a9",
+   "id": "d9279a9e",
    "metadata": {},
    "source": [
     "The following picture can help us understand the objective of our model now that we have expanded the nominal targets to numberics:\n",
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1b89fd0",
+   "id": "835c3723",
    "metadata": {},
    "source": [
     "## Separate the inputs and the outputs\n",
@@ -482,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "67dc28e2",
+   "id": "8e54e360",
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "095b2abf",
+   "id": "f962c9aa",
    "metadata": {},
    "source": [
     "## Split the data to two train and test\n",
@@ -759,7 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b0571d25",
+   "id": "855b12eb",
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96dbe861",
+   "id": "e2cb645b",
    "metadata": {},
    "source": [
     "## Create and train the model"
@@ -790,7 +790,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "02940dcf",
+   "id": "cbe5dcf3",
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b15fb03",
+   "id": "2fc89155",
    "metadata": {},
    "source": [
     "## Find the accuracy of the model"
@@ -820,7 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "63978dbf",
+   "id": "c06c1538",
    "metadata": {},
    "outputs": [
     {
@@ -838,21 +838,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc18fc77",
+   "id": "12784cd1",
    "metadata": {},
    "source": [
-    "# A visual represenation of our model\n",
+    "# A visual representation of our model\n",
     "\n",
     "<img src=\"./images/iris-decission-tree.png\" style=\"width:60%\"/>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0c535ae0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
