Adds the visualizations for Random Forests.

--- a/notebooks/03-00.1-intro-random-forest.ipynb
+++ b/notebooks/03-00.1-intro-random-forest.ipynb
@@ -7,6 +7,9 @@
    "source": [
     "# Random Forest\n",
     "\n",
+    "\n",
+    "<img src=\"./images/forest.jpg\" style=\"width:100%\"/>\n",
+    "\n",
     "Random forest is a Supervised Machine Learning Algorithm that is used widely in Classification and Regression problems. \n",
     "\n",
     "One of the most important features of the Random Forest Algorithm is that it can handle the data set containing continuous variables as in the case of regression and categorical variables as in the case of classification. It usually performs better for classification problems.\n",
@@ -57,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d7c61c1",
+   "id": "5b5662c3",
    "metadata": {},
    "source": [
     "### Example\n",
@@ -72,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c2d12ee4",
+   "id": "af75cb08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "257af2d8",
+   "id": "e316b17b",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48a51fc2",
+   "id": "28ed5f73",
    "metadata": {},
    "source": [
     "## Convert targets to categorical\n",
@@ -265,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "db1d338f",
+   "id": "d79d0290",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9279a9e",
+   "id": "21e2bed6",
    "metadata": {},
    "source": [
     "The following picture can help us understand the objective of our model now that we have expanded the nominal targets to numberics:\n",
@@ -470,7 +473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "835c3723",
+   "id": "bc55bd2a",
    "metadata": {},
    "source": [
     "## Separate the inputs and the outputs\n",
@@ -482,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8e54e360",
+   "id": "14b1c699",
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +749,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f962c9aa",
+   "id": "17c3827f",
    "metadata": {},
    "source": [
     "## Split the data to two train and test\n",
@@ -759,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "855b12eb",
+   "id": "f546134c",
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +784,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2cb645b",
+   "id": "c5b9969e",
    "metadata": {},
    "source": [
     "## Create and train the model"
@@ -790,7 +793,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cbe5dcf3",
+   "id": "37d201fd",
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +814,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fc89155",
+   "id": "a46378a6",
    "metadata": {},
    "source": [
     "## Find the accuracy of the model"
@@ -820,7 +823,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c06c1538",
+   "id": "f064c8f7",
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +841,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12784cd1",
+   "id": "1ae6233a",
    "metadata": {},
    "source": [
     "# A visual representation of our model\n",
