Adds the visualizations for Random Forests.

--- a/notebooks/03-00.1-intro-random-forest.ipynb
+++ b/notebooks/03-00.1-intro-random-forest.ipynb
@@ -55,12 +55,33 @@
     "\n",
     "- Clean missing values (either removing them or adjusting them)\n",
     "- Convert nominal data to categorical\n",
-    "- Unlike to NN in random forests there in no need to normalize or scale the data\n"
+    "- Unlike to NN in random forests there in no need to normalize or scale the data\n",
+    "\n",
+    "### Optimizing Scikit Random Forest Models\n",
+    "\n",
+    "While the internal model parameters are learned during the \n",
+    "training phase the hyperparameters must be specified in advance\n",
+    "(and this is why fine tuning a model is not exact science but it\n",
+    "involves a great deal of trial and error attempts).\n",
+    "\n",
+    "Specifically for Random Forests two of the most important\n",
+    "hyperparameters to use are the following:\n",
+    "\n",
+    "- The max number of decirsion trees in the forest\n",
+    "- The max number of features to use in an IF-THEN-ELSE case\n",
+    "\n",
+    "while for a full description of what can be parameterized using\n",
+    "the Scikit implemenation the best source is the officical documenenation\n",
+    "that can be found here:\n",
+    "\n",
+    "https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5b5662c3",
+   "id": "3fe25f8c",
    "metadata": {},
    "source": [
     "### Example\n",
@@ -75,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "af75cb08",
+   "id": "65fe2460",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e316b17b",
+   "id": "bc6fe794",
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28ed5f73",
+   "id": "1f140522",
    "metadata": {},
    "source": [
     "## Convert targets to categorical\n",
@@ -268,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d79d0290",
+   "id": "6959e9bc",
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21e2bed6",
+   "id": "03a30d46",
    "metadata": {},
    "source": [
     "The following picture can help us understand the objective of our model now that we have expanded the nominal targets to numberics:\n",
@@ -473,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc55bd2a",
+   "id": "bf569b73",
    "metadata": {},
    "source": [
     "## Separate the inputs and the outputs\n",
@@ -485,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "14b1c699",
+   "id": "255a0748",
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +770,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17c3827f",
+   "id": "c6961854",
    "metadata": {},
    "source": [
     "## Split the data to two train and test\n",
@@ -762,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f546134c",
+   "id": "1c3846f2",
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +805,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5b9969e",
+   "id": "2feaee2f",
    "metadata": {},
    "source": [
     "## Create and train the model"
@@ -793,7 +814,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "37d201fd",
+   "id": "de393e49",
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +835,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a46378a6",
+   "id": "d1a51b86",
    "metadata": {},
    "source": [
     "## Find the accuracy of the model"
@@ -823,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f064c8f7",
+   "id": "877db459",
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +862,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ae6233a",
+   "id": "6b6b0d3f",
    "metadata": {},
    "source": [
     "# A visual representation of our model\n",
