--- a/notebooks/bibliography.ipynb
+++ b/notebooks/bibliography.ipynb
@@ -12,7 +12,7 @@
     "    <tr>\n",
     "        <td>\n",
     "            <img src=\"./images/neural-smithing.jpg\"\n",
-    "                 style=\"float:center;width:120px;\"/>\n",
+    "                 style=\"float:center;width:320px;\"/>\n",
     "        </td>\n",
     "        <td style=\"text-align:left\">\n",
     "            Very comprehensive coverage of the basics of NN; strongly\n",
@@ -21,7 +21,7 @@
     "        </td>\n",
     "        <td>\n",
     "            <img src=\"./images/deep-learning.jpg\"\n",
-    "                 style=\"float:center;width:120px;\"/>\n",
+    "                 style=\"float:center;width:320px;\"/>\n",
     "        </td>\n",
     "        <td style=\"text-align:left\">\n",
     "            Covers the theory behind the modern evolutions of NN covering\n",
@@ -44,6 +44,24 @@
     "        <td style=\"text-align:left\">\n",
     "            Older text, my first book on NN (late nineties), still has some\n",
     "            something to teach us (needs a solid understanding of C++ though!)\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td>\n",
+    "            <img src=\"./images/artificial-inteligence-modern-approach.jpeg\"\n",
+    "                 style=\"float:center;width:120px;\"/>\n",
+    "        </td>\n",
+    "        <td style=\"text-align:left\">\n",
+    "            One of the most influential books in Artificial Inteligence, \n",
+    "            very comperhensive, perfect reference for anything AI related/\n",
+    "        </td>\n",
+    "        <td>\n",
+    "            <img src=\"./images/artificial-inteligence-lisp.jpg\"\n",
+    "                 style=\"float:center;width:120px;\"/>\n",
+    "        </td>\n",
+    "        <td style=\"text-align:left\">\n",
+    "            Considered outdated since it uses LISP to solve AI problems, still\n",
+    "            worth learning if you need to master the topic.\n",
     "        </td>\n",
     "    </tr>\n",
     "    <tr>\n",
@@ -143,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "457d5ab4",
    "metadata": {},
    "outputs": [
@@ -162,10 +180,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f73ed6560b0>"
+       "<IPython.lib.display.IFrame at 0x7f4e53de8220>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "06576e85",
    "metadata": {},
    "outputs": [
@@ -196,10 +214,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f73ed657250>"
+       "<IPython.lib.display.IFrame at 0x7f4e52c39ab0>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "ca7632dd",
    "metadata": {},
    "outputs": [
@@ -229,10 +247,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f73ed6577c0>"
+       "<IPython.lib.display.IFrame at 0x7f4e52c38fd0>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
