Adds the function to export random forest to disk.

--- a/notebooks/03-00.1-intro-random-forest.ipynb
+++ b/notebooks/03-00.1-intro-random-forest.ipynb
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c39e6f9b",
+   "id": "00268592",
    "metadata": {},
    "source": [
     "## Define the function to export random forest to image"
@@ -910,7 +910,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d1f41485",
+   "id": "7b7d7c21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -943,7 +943,7 @@
     "            'dot', '-Tpng',\n",
     "            f'{file_name}.dot',\n",
     "            '-o',\n",
-    "            f'{file_name}.png',\n",
+    "            img_filename,\n",
     "            '-Gdpi=600'\n",
     "        ]\n",
     "    )\n",
@@ -953,18 +953,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "7c2058dc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "filename = random_forest_to_image(clf, \"/tmp/sample-random-forest2\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "356f95d8",
+   "execution_count": 15,
+   "id": "7f32d20e",
    "metadata": {},
    "outputs": [
     {
@@ -974,12 +964,13 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "filename = random_forest_to_image(clf, \"/tmp/sample-random-forest2\")\n",
     "from IPython.display import Image\n",
     "Image(filename=filename) "
    ]
@@ -987,7 +978,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b253925",
+   "id": "1fd029c1",
    "metadata": {},
    "outputs": [],
    "source": []
