--- a/notebooks/04-00.1-intro-unsupervised-learning.ipynb
+++ b/notebooks/04-00.1-intro-unsupervised-learning.ipynb
@@ -3,9 +3,13 @@
   {
    "cell_type": "markdown",
    "id": "0b301df8",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
-    "# Supervised and unsupervised ML problems\n",
+    "# Unsupervised ML algorithms\n",
     "\n",
     "ML problems can be categorized in two main groups based on whether\n",
     "\"target\" values (also known as labels) are available or not.\n",
@@ -49,7 +53,11 @@
   {
    "cell_type": "markdown",
    "id": "e6c8e135",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# The K-means algorithm\n",
     "\n",
@@ -156,7 +164,11 @@
    "cell_type": "code",
    "execution_count": 54,
    "id": "72419069",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -171,7 +183,11 @@
   {
    "cell_type": "markdown",
    "id": "6ed23f7f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Sample data that can be used for clustering"
    ]
@@ -180,7 +196,11 @@
    "cell_type": "code",
    "execution_count": 92,
    "id": "7d9f7c06",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
